# apertium-zul

./: .gitattributes  .gitignore  Makefile  Makefile.am  README  apertium-zul.pc.in  apertium-zul.zul-tags.lexd  apertium-zul.zul.lexc  apertium-zul.zul.lexd  apertium-zul.zul.twoc  apertium-zul.zul.twol  configure.ac  modes.xml
corpus/: coverage.sh  ukwabelana_text.txt
corpus/ukwabelana/: 2010.07.17.AnalysisList.txt  2010.07.17.WordListLabelled.txt  2010.07.17.ZuluSentencesPOStagged.txt  Makefile  lab2ap.py  make_ambig_corpus.py
speller/: index.xml
test/: analysis-disam-expected.txt  analysis-input.txt  analysis-morph-expected.txt  generation-generator-expected.txt  generation-input.txt  tests.json
